--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ h1 {
     padding: 20px;
     margin: 0; /* Remove margin to span the whole page */
     height: 100vh;
-    background-image: url("/assets/photos/kristaps-ungurs-F81LTvewGoU-unsplash.jpg");
+    background-image: url("./assets/photos/kristaps-ungurs-F81LTvewGoU-unsplash.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
